chore(app): Fix few issues on small screens.
Closes #972

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -35,6 +35,10 @@ abbr {
 #gdc-header {
   border: none;
 }
+.navbar-nav > li > a {
+  padding-left: 13px;
+  padding-right: 13px;  
+}
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
